--- a/home.css
+++ b/home.css
@@ -1,34 +1,43 @@
 .container1{
-    background-color:lightyellow;
+    background-color:lightgreen;
     position:fixed;
     width:100vw;
-    height:7.8vh;
+    height:6.4vh;
 
 }
 .container2{
-    background-color:lightblue;
+    background-color:white;
     position:fixed;
     width:100vw;
+    margin-top:-1.4vh;
 }
 /* .container3{
     width:100vw;
 } */
 .container4{
     background-color:orange;
-    height:83.7vh;
-    margin-top:-1.3vh;
+    height:86.3vh;
+    margin-top:-3.9vh;
 }
 .container5{
     background-color:lightpink;
-    height:83.5vh;
+    height:86.6vh;
 }
  .container6{
-    height:83.7vh;
+    height:86.6vh;
     background-color:lightgreen;
 }
 .container7{
-    height:82.5vh;
+    height:86.6vh;
     background-color:lightpink;
+}
+.container8{
+    height:86.6vh;
+    background-color:darkgrey;
+}
+.container9{
+    height:86.6vh;
+    background-color:cornflowerblue;
 }
 /*.container8{
     margin-top:4vw;
@@ -36,36 +45,39 @@
     display:flex;
     height:2vw;
 } */
+.container10{
+    height:6vh;
+}
 .hpos1{
     font-size:-10vw;
-    margin-left:2vw;
-    margin-top:0.7vh;
+    margin-left:1.2vw;
+    margin-top:1.4vh;
 }
 .hpos2{
     font-size:-9vw;
     margin-left:3.2vw;
-    margin-top:0.7vh;
+    margin-top:1.4vh;
     font-weight: bold;
 }
 .hpos3{
     font-size:-10vw;
-    margin-top:0.8vh;
+    margin-top:1.4vh;
     margin-left:3vw;
 }
 .globelogo{
-    margin-left:50vw;
+    margin-left:53.1vw;
 
-    margin-top:0.7vh;
+    margin-top:1.4vh;
     font-size:2vw;
 }
 .ppos1{
-    margin-top:0.7vh;
-    margin-left:0.5vw;
+    margin-top:1.4vh;
+    margin-left:1vw;
     font-size:1.7vw;
 }
 .searchlogo{
-    margin-left:10vw;
-    margin-top:0.7vh;
+    margin-left:1vw;
+    margin-top:1.1vh;
     font-size:2vw; 
 }
 *{
@@ -77,7 +89,7 @@ list-style-type:none;
 width:100vw;
 background-color:aqua;
 overflow:auto;
-height:8.5vh;
+height:7.3vh;
 position:fixed;
 }
 .menu-bar li a{
@@ -226,16 +238,6 @@ border-style:solid;
     border-style:solid;
     border-color:blue;
     
-  }
-  .clogo{
-    margin-left:40vw;
-    margin-top:2vh;
-   
-  }
-  .fppos{
-    margin-left:2vw;
-    margin-top:2vh;
-    font-size:5vw;
   }
   .hpos9{
     margin-left:150vw;
