--- a/home.css
+++ b/home.css
@@ -46,7 +46,7 @@
     height:2vw;
 } */
 .container10{
-    height:6vh;
+    height:1vh;
 }
 .hpos1{
     font-size:-10vw;
@@ -112,7 +112,19 @@ font-size:1.5vw;
 margin-top:0.2vh;
 
 }
-   
+.arrow {
+    border:solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    margin-left:190px;
+    margin-bottom:30px;
+    margin-top:-30px;
+  }
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }  
 .item1{
    
     font-size:1.5vw;
