--- a/WhoWeAre.css
+++ b/WhoWeAre.css
@@ -17,6 +17,10 @@
 .container4{
     height:92.2vh;
 }
+.container5{
+    background-image: linear-gradient(to right, rgb(240, 239, 235) , rgba(91, 170, 216, 0.986));
+    height:5vh;
+}
 /* .container5{
     background-color:lightpink;
     height:86.6vh;
