--- a/What We Do.css
+++ b/What We Do.css
@@ -343,27 +343,99 @@ font-size: 25px;
     height:48vw;
   }
   .pp1{
-    margin-top: 105px;
-    margin-left: 3vw;
+    margin-top: 120px;
+    margin-left: 30px;
     font-size: 45px;
     font-weight: bold;
     font-family: sans-serif;
+    width: 550%;
   }
   .pp2{
-    margin-top: 280px;
-    margin-left: -40.5vw;
-    font-size: 20px;
+    margin-top: 300px;
+    margin-left: -1055px;
+    margin-right: 330px;
+    font-size: 18px;
     font-family: sans-serif;
+    width: 465%;
   }
   .pp3{
-    margin-top: 400px;
-    margin-left: -60.5vw;
-    font-size: 20px;
+    margin-top: 430px;
+    margin-left: -1210px;
+    margin-right: 500px;
+    font-size: 18px;
     font-family: sans-serif;
+    width: 435%;
   }
   .pp4{
-    margin-top: 518px;
-    margin-left: -59vw;
-    font-size: 20px;
+    margin-top: 558px;
+    margin-left: -1330px;
+    margin-right: 115px;
+    font-size: 18px;
     font-family: sans-serif;
+    width: 450%;
+  }
+  .img1{
+    margin-top: 150px;
+    margin-left: -350px;
+    margin-right: 230px;
+  }
+  .img2{
+    margin-top: 200px;
+    margin-right: 220px;
+    margin-left: -300px;
+    width: 30%;
+  }
+  .img3{
+    margin-top: 420px;
+    margin-left: -290px;
+    margin-right: 290px;
+  }
+  .circle3 {
+    width: 130%;
+    height: 200px;
+    line-height: 50px;
+    border-radius: 50%;
+    margin-top: 400px;
+   margin-right: 100px;
+    color: black;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+  }
+  .let1{
+    font-size: 25px;
+    margin-top: 70px;
+    margin-left: -50px;
+   font-weight: bold;
+  }
+  .pp{
+    margin-top: -20px;
+    font-size: 25px;
+    margin-left: -62px;
+    font-weight: bold;
+  }
+  .paragraph-2{
+    display: flex;
+  }
+
+
+
+
+  .container3{
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
+    height:40vw;
+  }
+  .para{
+    display: flex;
+  }
+  .treeimg{
+   
+    margin-top: 100px;
+    margin-left: 550px;
   }
