--- a/WhoWeAre.css
+++ b/WhoWeAre.css
@@ -1,5 +1,5 @@
 .container1{
-    background-color:lightgreen;
+    background-image: linear-gradient(to right, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
     position:fixed;
     width:100vw;
     height:6.4vh;
@@ -19,7 +19,12 @@
 }
 .container5{
     background-image: linear-gradient(to right, rgb(240, 239, 235) , rgba(91, 170, 216, 0.986));
-    height:5vh;
+    height:7vh;
+    margin-top:-1.4vh;
+}
+.container6{
+    background-color:cadetblue;
+    height:80.7vh;
 }
 /* .container5{
     background-color:lightpink;
@@ -50,6 +55,7 @@
 .container10{
     height:1vh;
 }
+
 .hpos1{
     font-size:-10vw;
     margin-left:1.2vw;
@@ -165,13 +171,30 @@ margin-top:0.2vh;
     to{ transform: translateX(0vw); }
   } */
 .ppos2{
-    font-weight:bold;
-    font-size:35vw;
+    padding-top:2vh;
+    font-size:1.4vw;
+    padding-left:2vw;
+}
+.ppos3{
+    margin-top:-50vh;
+    color:white;
+    padding-left:4vw;
+    font-size:1.8vw;
+    line-height:5.5vh;
 }
 .ppos4{
     margin-left:50vw;
     font-size:10vw;
     
+}
+.hpos4{
+    padding-top:13vh;
+    padding-left:4vw;
+    color:white;
+    font-size:1.3vw;
+}
+.circle{
+    background-image: linear-gradient(to top, rgb(58, 214, 201) , rgba(223, 220, 53, 0.986));
 }
 
  /* #rectangle{
