--- a/road.css
+++ b/road.css
@@ -201,12 +201,12 @@ z-index:1;
      font-size: 1.3rem;
      font-weight: bold;
   top: -100px;
- margin-top: -3.6%;
+ margin-top: -3%;
     
      /* width: 150%; */
 }
 .Whos{
-    margin-top: -3.6%;
+    margin-top: -3%;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.3rem;
     font-weight: bold;
@@ -216,17 +216,17 @@ z-index:1;
     font-size: 21px;
     font-weight: bold;
      
-    margin-top: -3.6%;
+    margin-top: -3%;
 }
 .Insights{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      font-size: 21px;
      font-weight: bold;
      margin-left: -21px;
-     margin-top: -3.6%;
+     margin-top: -3%;
 }
 .getin{
-   margin-top: -3.6%;
+   margin-top: -3%;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 21px;
    font-weight: bold;
@@ -243,9 +243,9 @@ z-index:1;
     margin-top: 20px;
 }
 .gg{
-    margin-left: 2vw;
-    margin-top: 10px;
-    margin-bottom: -20px;
+    margin-left: 5vw;
+    margin-top: 22px;
+    margin-bottom: -32px;
 width: 0%;
 font-size: 25px;
 text-decoration: none;
@@ -272,5 +272,104 @@ color: #fff;
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:50vw;
+    height:44vw;
+  }
+  .paragraph{
+    display: flex;
+  }
+  .para1{
+    margin-top: 160px;
+    color: #fff;
+    font-size: 24px;
+    font-family: sans-serif;
+    margin-left: 2%;
+    width: 60vw;
+   
+  }
+  .para2{
+    margin-top: 285px;
+    color: #fff;
+    font-size: 24px;
+    font-family: sans-serif;
+    margin-left: -33.5%;
+    width: 60vw;
+  }
+  .para3{
+    margin-top: 520px;
+    color: #fff;
+    font-size: 24px;
+    font-family: sans-serif;
+    margin-left: -33.5%;
+    width: 60vw;
+  }
+  .let{
+    font-size: 120px;
+    margin-top: -120px;
+  }
+  .circle {
+    width: 280px;
+    height: 280px;
+    line-height: 500px;
+    border-radius: 50%;
+    margin-top: 140px;
+    margin-left: -110%;
+    color: black;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+  }
+  .lets{
+    font-size: 120px;
+    margin-top: -120px;
+  }
+  .circle2 {
+    width: 280px;
+    height: 280px;
+    line-height: 500px;
+    border-radius: 50%;
+    margin-top: 330px;
+    margin-left: -265px;
+    color: black;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+    border: black;
+  }
+
+  .footer{
+    height: 50px;
+    margin-top: -38px;
+    display: flex;
+    background-color:white;
+  }
+  .fp{
+    margin-top: 18px;
+   margin-left: 1.5%;
+   font-size: 20px;
+  }
+  .fc{
+    margin-left: 69%;
+    margin-top:10px ;
+  }
+  .eimg{
+    margin-left: -90%;
+    margin-top: 6px;
+  }
+  .lin{
+    margin-top: 5px;
+    margin-left: 200px;
+  }
+  .face{
+    margin-top: 5px;
+   margin-left: 0.6%;
+  }
+  .inst{
+    margin-top: 5px;
+   margin-left: 0.9%;
+  }
+  .gm{
+    margin-top: 5px;
+    margin-left: -36%;
+  }
+  .uu{
+    margin-top: 0.35%;
+    margin-left: -0.5%;
   }
