--- a/home.css
+++ b/home.css
@@ -1,48 +1,63 @@
 .container1{
     background-image: linear-gradient(to right, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
     position:fixed;
-    width:100vw;
+    width:99.1vw;
     height:6.4vh;
 
 }
 .container2{
     background-color:white;
     position:fixed;
-    width:100vw;
+    width:99.1vw;
     margin-top:-1.4vh;
 }
-/* .container3{
-    width:100vw;
-} */
+.container3{
+    background-color:skyblue;
+    height:92.8vh;
+    margin-left:-0.4vw;
+    width:99.1vw;
+    margin-top:-6.6vh;
+}
 .container4{
     background-image: linear-gradient(to right, rgba(248, 215, 29, 0.904) , rgb(255, 72, 0));
     height:86.3vh;
-    margin-top:-3.9vh;
-    margin-left:-0.2vw;
+    margin-top:-6.6vh;
+    margin-left:-0.4vw;
+    width:99.1vw;
 }
 .container5{
     background-color:lightpink;
     height:86.6vh;
+    margin-left:-0.4vw;
+    width:99.1vw;
 }
  .container6{
     background-image: linear-gradient(to right, rgba(110, 187, 74, 0.904) , rgb(150, 96, 175));
     height:86.6vh;
     background-color:lightgreen;
     width:99.1vw;
+    margin-left:-0.4vw;
 }
 .container7{
     background-image: linear-gradient(to right, rgba(233, 131, 91, 0.904) , rgb(33, 111, 201));
     height:86.6vh;
     width:99.1vw;
+    margin-left:-0.4vw;
 }
 .container8{
     background-image: linear-gradient(to right, rgb(240, 239, 235) , rgba(82, 80, 83, 0.986));
     height:86.6vh;
     width:99.1vw;
+    margin-left:-0.4vw;
 }
 .container9{
     background-image: linear-gradient(to right, rgb(151, 167, 185) , rgba(36, 82, 209, 0.986));
     height:86.6vh;
+    margin-left:-0.4vw;
+    width:99.1vw;
+}
+.container10{
+    height:4vh;
 }
 /*.container8{
     margin-top:4vw;
@@ -50,10 +65,16 @@
     display:flex;
     height:2vw;
 } */
-.container10{
-    height:1vh;
+/* .container10{
+    height:3vh;
+} */
+/* .dot1{
+    font-size:10px;
+    margin-left:10px;
 }
-
+.dot2{
+    font-size:10px;
+} */
 
 
 
@@ -74,20 +95,20 @@
     text-decoration: none;
  color: black;
     margin: 1.6vh;
-    margin-left: 2.2vw;
+    margin-left: 2vw;
     font-size: 25px;
     margin-top: -30px;
 }
 .ne{
 text-decoration: none;
 margin-left:11vw;
-margin-top: -6vh;
+margin-top: -5vh;
 font-size: 25px;
 }
 .In{
 text-decoration: none;
 margin-left: 25vw;
-margin-top: -6vh;
+margin-top: -5vh;
 font-size: 25px;
 }
 .world{
@@ -111,7 +132,7 @@ font-size: 25px;
 
 
 .menu-header{
-    background-color:white;
+    background-color:rgb(253, 250, 250);
     text-align: right;
     position:fixed;
     width:99.1vw;
@@ -160,7 +181,10 @@ font-size: 25px;
 }
 
 
-
+.styo:hover{
+    color:rgb(70, 70, 73);
+    transform: scale(1.25);
+    }
 
 
 
@@ -218,7 +242,7 @@ color: #fff;
   .menu-bar ul li a
   {
   text-decoration: none;
-  color:#4A148C;
+  color:#3a353f;
   }
   .active, .menu-bar ul li
   {
@@ -544,3 +568,4 @@ border-style:solid;
     margin-left:150vw;
     font-size:5vw;
   } */
+  
