--- a/What We Do.css
+++ b/What We Do.css
@@ -20,13 +20,13 @@
 .ne{
 text-decoration: none;
 margin-left:11vw;
-margin-top: -5.7vh;
+margin-top: -4.7vh;
 font-size: 25px;
 }
 .In{
 text-decoration: none;
 margin-left: 25vw;
-margin-top: -3.9vh;
+margin-top: -3.3vh;
 font-size: 25px;
 }
 .world{
@@ -45,6 +45,24 @@ font-size: 25px;
     margin-top: -30px;
     font-size: 27px;
 }
+.dot1{
+  margin-top: -18px;
+  font-size: 10px;
+  margin-left: 85px;
+}
+.dot2{
+  font-size: 10px;
+  margin-left: 165px;
+  margin-top: -17px;
+}
+
+
+
+
+
+
+
+
 .menu-bar{
     margin-top: 0%;
     margin-left: 0%;
@@ -73,7 +91,7 @@ font-size: 25px;
   .menu-bar ul li a
   {
   text-decoration: none;
-  color:#4A148C;
+  color:#69666c;
   }
   .active, .menu-bar ul li
   {
@@ -183,7 +201,7 @@ font-size: 25px;
   position: absolute;
   left: 0;
   top: 100%;
-  background-color:#784aac;
+  background-color:#36303c;
   opacity:0.9;
   }
 .menu-header{
@@ -234,6 +252,10 @@ z-index:1;
    font-weight: bold;
 }
 
+.styo:hover{
+  color:rgb(70, 70, 73);
+  transform: scale(1.25);
+  }
 
 
 
@@ -277,10 +299,10 @@ color: #fff;
     height:50vw;
   }
   .aboutt{
-    margin-left: 150px;
+    margin-left: 90px;
     color: rgb(247, 244, 244);
     margin-top: 220px;
-    font-size: 48px;
+    font-size: 55px;
     font-family: sans-serif;
     font-weight: bold;
     width: 300%;
@@ -289,19 +311,20 @@ color: #fff;
     display: flex;
   }
   .p1{
-    margin-top: 310px;
-    margin-left: -370px;
-    font-size: 40px;
+    margin-top: 320px;
+    margin-left: -398px;
+    font-size: 48px;
     font-family: sans-serif;
    width: 650%;
     color: rgb(211, 167, 167);
+    font-weight: bold;
   }
   .p2{
-    margin-top: 480px;
-    margin-left: -770px;
-    font-size: 25px;
+    margin-top: 485px;
+    margin-left: -852px;
+    font-size: 28px;
     font-family: sans-serif;
-   width: 800%;
+   width: 950%;
     color: rgb(211, 167, 167);
   }
   
@@ -315,7 +338,7 @@ color: #fff;
     line-height: 500px;
     border-radius: 50%;
     margin-top: 200px;
-    margin-left: 10px;
+    margin-left: -150px;
     color: black;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
@@ -412,13 +435,13 @@ color: #fff;
   .let1{
     font-size: 25px;
     margin-top: 70px;
-    margin-left: -85px;
+    margin-left: -80px;
    font-weight: bold;
   }
   .pp{
     margin-top: -20px;
     font-size: 25px;
-    margin-left: -98px;
+    margin-left: -93px;
     font-weight: bold;
   }
   .paragraph-2{
@@ -437,7 +460,7 @@ color: #fff;
     display: flex;
     margin-left: auto;
   margin-right: auto;
-    height:30vw;
+    height:48vw;
   }
   .para{
     display: flex;
@@ -448,10 +471,331 @@ color: #fff;
     margin-left: 480px;
   }
 .rd{
-  margin-top: 10%;
-  margin-left: -25%;
-  font-size: 25px;
+  margin-top: 140px;
+  margin-left: -468px;
+  font-size: 45px;
+  font-weight: bold;
 }
+.rd1{
+  margin-top: 215px;
+  margin-left: -438px;
+  font-size: 30px;
+}
+
+.container4{
+  height: 88vh;
+  display: flex;
+  background-image:url(ppc4.PNG);
+    position: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.hh{
+  height: 6vh;
+  background-color: #c0b9b9;
+  width: 100%;
+  z-index: 0;
+}
+.hp{
+  margin-top: 0.8%;
+  text-align: center;
+  font-size: 25px;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+.h1{
+  margin-top: 910px;
+  margin-left: -850px;
+  font-size: 95px;
+  color: white;
+}
+.h2{
+  margin-top: -418px;
+  margin-left: 1000px;
+  font-size: 95px;
+}
+
+.circle5{
+  width: 3vw;
+  height: 6vh;
+  -webkit-border-radius:3vw;
+  -moz-border-radius:3vw;
+  border-radius:3vw;
+  border-width:0.2vw;
+  border-style:solid;
+  border-color:rgb(15, 15, 18);
+  margin-left: 735px;
+  margin-top: 220px;
+}
+.arrow{
+  margin-left:0.3vw;
+  margin-top:-0.7vh;
+  font-size:2.9vw;
+  color: black;
+}
+
+.container5{
+  height: 110vh;
+  display: flex;
+  background-image:url(ppc5.PNG);
+  position: cover;
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-top: 4vh;
+}
+
+.leta{
+  font-size: 70px;
+  margin-top: -195px;
+}
+.circlea {
+  width: 120px;
+  height: 120px;
+  line-height: 500px;
+  border-radius: 50%;
+  margin-top: 90px;
+  margin-left: -1620px;
+  color: black;
+  text-align: center;
+  background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+}
+.letb{
+  font-size: 70px;
+  margin-top: -192px;
+}
+.circleb {
+  width: 120px;
+  height: 120px;
+  line-height: 500px;
+  border-radius: 50%;
+  margin-top: 320px;
+  margin-left: -120px;
+  color: black;
+  text-align: center;
+  background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+  border: black;
+}
+.getparagraph{
+  display: flex;
+}
+.getp{
+  width: 28vw;
+  text-align: justify;
+  margin-left: 150px;
+  margin-top: 50px;
+  font-family: sans-serif;
+  font-size: 22px;
+}
+
+.box1{
+  margin-left: 70px;
+  margin-top:50px;
+  font-size: 17px;
+  z-index:0;
+  padding-top:-190px;
+}
+.man{
+  margin-left:20px;
+  font-family: sans-serif;
+}
+.hm{
+  text-decoration:none;
+  color:black;
+  font-weight:normal;
+  margin-left:20px;
+  padding-top:0px;
+  font-family: sans-serif;
+}
+.ab{
+  font-weight:normal;
+  margin-left:20px;
+  margin-top: -7px;
+  font-family: sans-serif;
+  width:100px
+}
+.ind1{
+  font-weight:normal;
+  margin-left:20px;
+  margin-top: -12px;
+  font-family: sans-serif;
+}
+.tech{
+  font-weight:normal;
+  margin-left:20px;
+ margin-top: -12px;
+ font-family: sans-serif;
+}
+.place{
+  font-weight:normal;
+  margin-left:20px;
+  margin-top: -12px;
+  font-family: sans-serif;
+}
+.enr{
+  font-weight:normal;
+ margin-top: -10px;
+  margin-left:20px;
+  font-family: sans-serif;
+ 
+}
+.car{
+ margin-left: 18px;
+ margin-top: 8px;
+ font-family: sans-serif;
+}
+.newe{
+  margin-left: 20px;
+  margin-top: 8px;
+  font-family: sans-serif;
+  width: 200px;
+}
+.box2{
+ display: flex;
+ margin-left: 98px;
+ margin-top: 50px;
+ font-size: 17px;
+}
+.service{
+  margin-left: -80px;
+  font-family: sans-serif;
+}
+.eds{
+  font-weight:normal;
+  font-family: sans-serif;
+  margin-top: 40px;
+  margin-left: -68px;
+  width: 25vw;
+
+}
+.ind{
+  font-weight:normal;
+  font-family: sans-serif;
+  margin-top: 70px;
+  margin-left: -382px;
+  width: 25vw;
+}
+.desig{
+  font-weight:normal;
+  font-family: sans-serif;
+  margin-left: -382px;
+  margin-top: 100px;
+  width: 25vw;
+}
+.erp{
+  font-weight:normal;
+  font-family: sans-serif;
+  width: 25vw;
+  margin-top: 132px;
+  margin-left: -383px;
+}
+.angular{
+  font-weight:normal;
+  font-family: sans-serif;
+  margin-top: 160px;
+  margin-left: -385px;
+  width: 25vw;
+}
+.parmanent{
+  font-weight:normal;
+  font-family: sans-serif;
+  width: 25vw;
+  margin-top: 190px;
+  margin-left: -385px;
+}
+.contractab{
+  font-weight:normal;
+  font-family: sans-serif;
+  margin-top: 220px;
+  margin-left: -383px;
+  width: 25vw;
+}
+.contractus{
+  font-weight:normal;
+  font-family: sans-serif;
+  margin-top: 250px;
+  margin-left: -380px;
+  width: 25vw;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.box3{
+display: flex;
+}
+
+.mb{
+  margin-top: 90px;
+  margin-left: -290px;
+  width: 400px;
+  color: #fff;
+  font-family: sans-serif;
+}
+.con{
+  margin-top: 50px;
+  margin-left: -48px;
+  width: 100%;
+  color: #fff;
+  font-size: 20px;
+  font-family: sans-serif;
+}
+.em{
+  margin-top: 130px;
+  margin-left: -315px;
+  width: 500px;
+  color: #fff;
+  font-family: sans-serif;
+}
+
+
+.location{
+  display: flex;
+}
+
+.locn{
+margin-top: 360px;
+margin-left: 20px;
+font-size: 30px;
+font-weight: bold;
+}
+.engl{
+  margin-top: 400px;
+  margin-left: -140px;
+}
+
+.manjira{
+  margin-top: 420px;
+  margin-left: -260px;
+}
+.floor{
+  margin-top: 440px;
+  margin-left: -220px;
+}
+.kphb{
+  margin-top: 459px;
+  margin-left: -160px;
+}
+
+
+
+
 
 
 
@@ -465,7 +809,7 @@ color: #fff;
 
   .footer{
     height: 50px;
-    margin-top: 108px;
+    margin-top: 0px;
     display: flex;
     background-color: bisque;
   }
