--- a/WhoWeAre.css
+++ b/WhoWeAre.css
@@ -1,156 +1,20 @@
-.container1{
-    background-image: linear-gradient(to right, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
-    position:fixed;
-    width:100vw;
-    height:6.4vh;
 
-}
-.container2{
-    background-color:white;
-    position:fixed;
-    width:100vw;
-    margin-top:-1.4vh;
-}
 /* .container3{
     width:100vw;
 } */
-.container4{
-    height:92.2vh;
-}
-.container5{
-    background-image: linear-gradient(to right, rgb(240, 239, 235) , rgba(91, 170, 216, 0.986));
-    height:7vh;
-    margin-top:-1.4vh;
-}
-.container6{
-    background-color:cadetblue;
-    height:80.7vh;
-}
-/* .container5{
-    background-color:lightpink;
-    height:86.6vh;
-}
- .container6{
-    height:86.6vh;
-    background-color:lightgreen;
-}
-.container7{
-    height:86.6vh;
-    background-color:lightpink;
-}
-.container8{
-    height:86.6vh;
-    background-color:darkgrey;
-}
-.container9{
-    height:86.6vh;
-    background-color:cornflowerblue;
-} */
+
 /*.container8{
     margin-top:4vw;
     margin-left:0%;
     display:flex;
     height:2vw;
 } */
-.container10{
-    height:1vh;
-}
-
-.hpos1{
-    font-size:-10vw;
-    margin-left:1.2vw;
-    margin-top:1.4vh;
-}
-.hpos2{
-    font-size:-9vw;
-    margin-left:3.2vw;
-    margin-top:1.4vh;
-    font-weight: bold;
-}
-.hpos3{
-    font-size:-10vw;
-    margin-top:1.4vh;
-    margin-left:3vw;
-}
-.globelogo{
-    margin-left:53.1vw;
-
-    margin-top:1.4vh;
-    font-size:2vw;
-}
-.ppos1{
-    margin-top:1.4vh;
-    margin-left:1vw;
-    font-size:1.7vw;
-}
-.searchlogo{
-    margin-left:1vw;
-    margin-top:1.1vh;
-    font-size:2vw; 
-}
 *{
     margin:0vw;
     padding:0vw;
 }
-.menu-bar ul{
-list-style-type:none;
-width:100vw;
-background-color:aqua;
-overflow:auto;
-height:7.3vh;
-position:fixed;
-}
-.menu-bar li a{
-text-decoration:none;
-display:block;
-color:black;
 
 
-}
-.menu-bar li a:hover{
-background-color:green;
-color:white;
-}
-.menu-bar li{
-
-float:left;
-line-height:5vh;
-margin-left:2.5vw;
-font-size:1.5vw;
-margin-top:0.2vh;
-
-}
-.arrow {
-    border:solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-    margin-left:190px;
-    margin-bottom:30px;
-    margin-top:-30px;
-  }
-  .down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-  }  
-.item1{
-   
-    font-size:1.5vw;
-    margin-left:20vw;
-}
-.item2{
-    margin-top:-10vh;
-    font-size:1.5vw;
-}
-.item3{
-    font-size:1.5vw;
-}
-.item4{
-    font-size:1.5vw;
-}
-.item5{
-    font-size:1.5vw;
-}
 /* .videopos{
     margin-top:-20vw;
     
@@ -172,7 +36,6 @@ margin-top:0.2vh;
   } */
 .ppos2{
     padding-top:2vh;
-    font-size:1.4vw;
     padding-left:2vw;
 }
 .ppos3{
@@ -182,11 +45,7 @@ margin-top:0.2vh;
     font-size:1.8vw;
     line-height:5.5vh;
 }
-.ppos4{
-    margin-left:50vw;
-    font-size:10vw;
-    
-}
+
 .hpos4{
     padding-top:13vh;
     padding-left:4vw;
@@ -211,25 +70,8 @@ height:3vw;
 border-style:solid;
     border-width:2vw;
 } */
-.ppos11{
-    font-weight:bold;
-    font-size: 8vw;
-    padding-left:10vw;
-    padding-top:13vh;
-}
-.ppos12{
-    
-    font-size: 5vw;
-    padding-left:10vw;
-    padding-top:6vh;
-    color:red;
-}
 
-.ppos13{
-    padding-left:2vw;
-    font-size:4vw;
-    line-height:5vh;
-}
+
 /*.ppos14{
     padding-left:2vw;
     font-size:4vw;
@@ -260,3 +102,314 @@ border-style:solid;
     margin-left:150vw;
     font-size:5vw;
   } */
+  
+.container4{
+    margin-top:-1.6vh;
+    margin-left:-0.4vw;
+    width:99.1vw;
+}
+.container5{
+    background-image: linear-gradient(to right, rgba(157, 165, 170, 0.904) , rgb(0, 238, 255));
+    height:2.6vh;
+    margin-left:-0.4vw;
+    width:99.1vw;
+}
+ .container6{
+    height:86.6vh;
+    background-color:white;
+    width:99.1vw;
+    margin-left:-0.4vw;
+}
+
+/* .container10{
+    height:3vh;
+} */
+
+
+
+
+
+
+
+.divstyle{
+    background-image: linear-gradient(to right, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));
+      height:48px;
+       position: fixed;
+       width:100%;
+       z-index: 1;
+       display: flex;
+       margin-top: -10px;
+       margin-left:-0.4vw;
+}
+.cc{
+    text-decoration: none;
+ color: black;
+    margin: 1.6vh;
+    margin-left: 2vw;
+    font-size: 25px;
+    margin-top: -30px;
+}
+.ne{
+text-decoration: none;
+margin-left:11vw;
+margin-top: -5vh;
+font-size: 25px;
+}
+.In{
+text-decoration: none;
+margin-left: 25vw;
+margin-top: -5vh;
+font-size: 25px;
+}
+.world{
+    margin-left: 1610px;
+    margin-top: -65px;
+    font-size: 30px;
+}
+.globelogo{
+    margin-left: 1580px;
+    top: 0;
+    margin-top: -49.5px;
+    font-size: 32px;
+}
+.searchlogo{
+    margin-left: 1750px;
+    margin-top: -60px;
+    font-size: 27px;
+}
+
+
+
+
+.menu-header{
+    background-color:rgb(253, 250, 250);
+    text-align: right;
+    position:fixed;
+    width:99.1vw;
+    height:65px;
+    margin-top:-35px;
+    z-index:1;
+    }
+    
+
+
+.what {
+    margin-left:-5%;
+     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+     font-size: 1.3rem;
+     font-weight: bold;
+  top: 100px;
+ margin-top: -8%;
+    
+     /* width: 150%; */
+}
+.Whos{
+    margin-top: -8%;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+.ser{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+    font-size: 21px;
+    font-weight: bold;
+     
+    margin-top: -8%;
+}
+.Insights{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+     font-size: 21px;
+     font-weight: bold;
+     margin-left: -21px;
+     margin-top: -8%;
+}
+.getin{
+   margin-top: -8%;
+   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   font-size: 21px;
+   font-weight: bold;
+}
+
+
+.styo:hover{
+    color:rgb(70, 70, 73);
+    transform: scale(1.25);
+    }
+
+
+
+
+
+
+
+
+
+
+
+.enimg{
+   
+    text-align: center;
+    margin-left: -80vw;
+    margin-top: 10px;
+}
+.gg{
+    margin-left: 8vw;
+    margin-top: 20px;
+    margin-bottom: -20px;
+width: 0%;
+font-size: 25px;
+text-decoration: none;
+color: #fff;
+}
+.lk{
+  margin-top: -50px;
+  margin-left: 28vw;
+}
+
+.menu-bar{
+    margin-top: 0%;
+    text-decoration: white;
+    width:98vw;
+   margin-left:-0.4vw;
+    text-align: right;
+    display: flex;
+  }
+  .menu-bar ul
+  {
+  display: inline-flex;
+  list-style: none;
+  color: #fff;
+  gap:0.97vw;
+  }
+  .menu-bar ul li{
+  width: 8.21vw;
+  left: -8px;
+  margin: 1.04vw;
+  margin-top:-32px;
+  padding: 4.21vw 0vw 0vw 0vw;
+  position: relative;
+  }
+  .menu-bar ul li a
+  {
+  text-decoration: none;
+  color:#3a353f;
+  }
+  .active, .menu-bar ul li
+  {
+  text-align:center;
+  padding-bottom: 1.3vw;
+  border-radius: 0.2vw;
+  }
+  .active, .menu-bar ul li:hover{
+    /* background-color:#4A148C; */
+  }
+  .menu-bar .fa
+  {
+   margin-right: 0.7vw;
+  }
+  .sub-menu-1{
+  display: none;
+  z-index:1;
+  margin-left: -1.6vw;
+  }
+  /* ? */
+  .menu-bar ul li:hover .sub-menu-1{
+  display: block;
+  /* position: absolute; */
+  left: 0;
+  top: 100%;
+  transition:1.6s;
+  background-color:#4A148C;
+  }
+  .sub-menu-1 ul{
+  display: block;
+  /* padding-right:10px; */
+  text-align:center;
+  margin-left: 0.5vw;
+  width:13vw;
+  /* padding-top:10px; */
+  transition:1.6s;
+  height: 70px;
+  margin-top:0.4vw;
+  /* gap: 25px; */
+  /* margin: 10px; */
+  -webkit-transition: height 0.3s ease;
+  transition: height 0.3s ease;
+  }
+  .sub-menu-1 ul li{
+    width:11.05vw;
+     padding:4px;
+     gap: 8vw;
+     /* gap:-10px; */
+  /* padding: 10px; */
+  }
+  .sub-menu-1 ul li:hover{
+  width:11.57vw;
+  background-color:#EF6C00;
+  /* padding: 10px; */
+  }
+  .sub-menu-1{
+  margin-left:-6.6vw;
+  display: none;
+  transition:1.6s;
+  }
+  .menu-bar ul li:hover .sub-menu-1{
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  transition:1.6s;
+  background-color:#784aac;
+  opacity:0.9;
+  }
+  .sub-menu-2{
+  margin-left:-6.4vw;
+  display: none;
+  width:250px;
+  text-align: center;
+  z-index:1;
+  }
+  .menu-bar ul li:hover .sub-menu-2{
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  background-color:#4A148C;
+  }
+  .sub-menu-2 ul{
+  display: block;
+  text-align:center;
+  width:250px;
+  margin-top:40px;
+  height: 40px;
+  margin-left: 10px;
+  }
+  .sub-menu-2 ul li{
+  width: 280px;
+  padding:5px;
+  /* padding: 10px; */
+  }
+  .sub-menu-2 ul li:hover{
+  width:210px;
+  background-color:#EF6C00;
+  /* padding: 10px; */
+  }
+  .sub-menu-2{
+  display: none;
+  }
+  .menu-bar ul li:hover .sub-menu-2{
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  background-color:#784aac;
+  opacity:0.9;
+  }
+.hpos1{
+    margin-top:4vh;
+}
+
+
+
+
+
